# suanPan

./: .ci-ignore  .clang-format  .clang-tidy  .codacy.yml  .config.cmake  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CITATION  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Doxyfile  Driver.cmake  Option.cmake  README.md  appveyor.yml  core20.yaml  snapcraft.yaml  snapcraft_core20.yaml  suanPan  suanPan.cpp  suanPan.h  suanPan.spec.rpkg
Constraint/: BC.cpp  BC.h  CMakeLists.txt  Constraint  Constraint.cpp  Constraint.h  ConstraintParser.cpp  ConstraintParser.h  Embed.cpp  Embed.h  Embed2D.cpp  Embed2D.h  FixedLength.cpp  FixedLength.h  LJPotential2D.cpp  LJPotential2D.h  LinearSpring2D.cpp  LinearSpring2D.h  MPC.cpp  MPC.h  MolecularDynamics.h  NodeFacet.cpp  NodeFacet.h  NodeLine.cpp  NodeLine.h  ParticleCollision.cpp  ParticleCollision.h  ParticleCollision2D.cpp  ParticleCollision2D.h  ParticleCollision3D.cpp  ParticleCollision3D.h  RestitutionWallPenalty.cpp  RestitutionWallPenalty.h  RigidWallMultiplier.cpp  RigidWallMultiplier.h  RigidWallPenalty.cpp  RigidWallPenalty.h
Constraint/BC/: BC  CMakeLists.txt  GroupMultiplierBC.cpp  GroupMultiplierBC.h  GroupPenaltyBC.cpp  GroupPenaltyBC.h  MultiplierBC.cpp  MultiplierBC.h  PenaltyBC.cpp  PenaltyBC.h
Constraint/Criterion/: CMakeLists.txt  ComplementaryEnergyEvolution.cpp  ComplementaryEnergyEvolution.h  Criterion  Criterion.cpp  Criterion.h  EnergyEvolution.cpp  EnergyEvolution.h  LogicCriterion.cpp  LogicCriterion.h  MaxDisplacement.cpp  MaxDisplacement.h  MaxHistory.cpp  MaxHistory.h  MaxResistance.cpp  MaxResistance.h  MinDisplacement.cpp  MinDisplacement.h  MinResistance.cpp  MinResistance.h  NodeBasedCriterion.cpp  NodeBasedCriterion.h  StrainEnergyEvolution.cpp  StrainEnergyEvolution.h
Constraint/Interaction/: CMakeLists.txt  Interaction  Interaction.cpp  Interaction.h
Converger/: AbsDisp.cpp  AbsDisp.h  AbsError.cpp  AbsError.h  AbsIncreAcc.cpp  AbsIncreAcc.h  AbsIncreDisp.cpp  AbsIncreDisp.h  AbsIncreEnergy.cpp  AbsIncreEnergy.h  AbsResidual.cpp  AbsResidual.h  CMakeLists.txt  Converger  Converger.cpp  Converger.h  ConvergerParser.cpp  ConvergerParser.h  FixedNumber.cpp  FixedNumber.h  LogicConverger.cpp  LogicConverger.h  RelDisp.cpp  RelDisp.h  RelError.cpp  RelError.h  RelIncreAcc.cpp  RelIncreAcc.h  RelIncreDisp.cpp  RelIncreDisp.h  RelIncreEnergy.cpp  RelIncreEnergy.h  RelResidual.cpp  RelResidual.h
Developer/Element/: CMakeLists.txt  ElementExample.cpp  ElementExample.h
Developer/Material/: CMakeLists.txt  ElasticExternal.cpp  MaterialExample.cpp  MaterialExample.h
Developer/Modifier/: CMakeLists.txt  ModifierExample.cpp  ModifierExample.h
Developer/ModuleBundle/: CMakeLists.txt
Developer/Section/: CMakeLists.txt  SectionExample.cpp  SectionExample.h
Domain/: CMakeLists.txt  ConditionalModifier.cpp  ConditionalModifier.h  DOF.h  Domain  Domain.cpp  Domain.h  DomainBase.cpp  DomainBase.h  DomainHelper.cpp  DomainState.cpp  ElementGroup.cpp  ExternalModule.cpp  ExternalModule.h  Factory.hpp  FactoryHelper.hpp  Group.cpp  Group.h  GroupGroup.cpp  Node.cpp  Node.h  NodeGroup.cpp  NodeGroup.h  NodeHelper.hpp  Storage.hpp  Tag.cpp  Tag.h
Domain/Group/: CustomNodeGroup.cpp  CustomNodeGroup.h  ElementGroup.cpp  ElementGroup.h  Group.cpp  Group.h  GroupGroup.cpp  GroupGroup.h  GroupParser.cpp  GroupParser.h  NodeGroup.cpp  NodeGroup.h
Domain/MetaMat/: BandMat.hpp  BandMatCUDA.hpp  BandMatMAGMA.hpp  BandMatSpike.hpp  BandSymmMat.hpp  CMakeLists.txt  DenseMat.hpp  FullMat.hpp  FullMatCUDA.hpp  ILU.hpp  IterativeSolver.hpp  Jacobi.hpp  MetaMat  MetaMat.hpp  Preconditioner.cpp  Preconditioner.hpp  SolverSetting.hpp  SparseMat.hpp  SparseMatCUDA.hpp  SparseMatFGMRES.hpp  SparseMatLis.hpp  SparseMatMAGMA.hpp  SparseMatMPI.hpp  SparseMatMUMPS.hpp  SparseMatPARDISO.hpp  SparseMatSuperLU.hpp  SymmPackMat.hpp  csc_form.hpp  csr_form.hpp  cuda_ptr.hpp  operator_times.hpp  sparse_form.hpp  triplet_form.hpp
Element/: CMakeLists.txt  Distributed.h  Element  Element.cpp  Element.h  ElementBase.h  ElementParser.cpp  ElementParser.h  ElementTemplate.cpp  ElementTemplate.h  MappingDOF.h  MaterialElement.cpp  MaterialElement.h  SectionElement.cpp  SectionElement.h
Load/: BodyForce.cpp  BodyForce.h  CMakeLists.txt  GroupBodyForce.cpp  GroupBodyForce.h  GroupNodalDisplacement.cpp  GroupNodalDisplacement.h  GroupNodalForce.cpp  GroupNodalForce.h  LineUDL.cpp  LineUDL.h  Load  Load.cpp  Load.h  LoadParser.cpp  LoadParser.h  NodalAcceleration.cpp  NodalAcceleration.h  NodalDisplacement.cpp  NodalDisplacement.h  NodalForce.cpp  NodalForce.h  ReferenceForce.cpp  ReferenceForce.h  SupportMotion.cpp  SupportMotion.h
MPI/: CMakeLists.txt  Distributed.h  distributed_obj.cpp  solver.pardiso.cpp  tester.pardiso.cpp
Material/: CMakeLists.txt  ExternalMaterial.cpp  ExternalMaterial.h  ExternalMaterialData.h  Material  Material.cpp  Material.h  Material.tex  MaterialBase.h  MaterialParser.cpp  MaterialParser.h  MaterialTemplate.cpp  MaterialTemplate.h  MaterialTester.cpp  MaterialTester.h  ParameterType.h
Section/: CMakeLists.txt  Fibre.cpp  Fibre.h  ParameterType.h  Section  Section.cpp  Section.h  SectionParser.cpp  SectionParser.h  SectionTester.cpp  SectionTester.h
Solver/: Arnoldi.cpp  Arnoldi.h  BFGS.cpp  BFGS.h  CMakeLists.txt  FEAST.cpp  FEAST.h  MPDC.cpp  MPDC.h  Newton.cpp  Newton.h  Ramm.cpp  Ramm.h  Solver  Solver.cpp  Solver.h  SolverParser.cpp  SolverParser.h
Toolbox/: BiCGSTAB.hpp  CMakeLists.txt  Converter.cpp  Converter.h  Expression.cpp  Expression.h  ExpressionParser.cpp  ExpressionParser.h  GMRES.hpp  IntegrationPlan.cpp  IntegrationPlan.h  LBFGS.hpp  Preconditioner.hpp  Quaternion.hpp  ResourceHolder.h  Toolbox  argument.cpp  argument.h  argumentParser.cpp  argumentParser.h  arpack.cpp  arpack.h  arpack_wrapper.cpp  arpack_wrapper.h  brent.hpp  command.cpp  command.h  commandParser.cpp  commandParser.h  container.h  debug.cpp  fgmres.hpp  misc.cpp  misc.h  pquadtree.hpp  print.cpp  print.h  resampling.cpp  resampling.h  response_spectrum.h  (+26 more)
(+3227 files in other folders)
